<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="16dp"
    card_view:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food_name"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#333333"/>

        <TextView
            android:id="@+id/tvItemCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category_item"
            android:textStyle="bold"
            android:textColor="#6A1B5D"
            android:layout_marginTop="4dp"/>

        <!-- SEPARATOR -->
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="#E5E5E5"/>

        <TextView
            android:id="@+id/tvItemCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_item"
            android:layout_marginTop="6dp"
            android:textSize="16sp"
            android:textColor="#444444"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>